# kdetranslation

./: README.md
KDE+zh_CN/4.13.x/messages/applications/: adblock.po  akregator_konqplugin.po  autorefresh.po  babelfish.po  desktop_applications_kate.po  desktop_applications_kde-baseapps.po  desktop_applications_konsole.po  dirfilterplugin.po  dolphin.po  domtreeviewer.po  fsview.po  imgalleryplugin.po  kate-ctags-plugin.po  kate.po  kate_kttsd.po  katebacktracebrowserplugin.po  katebuild-plugin.po  katecloseexceptplugin.po  katefilebrowserplugin.po  katefiletemplates.po  kategdbplugin.po  katehelloworld.po  katekonsoleplugin.po  katemailfilesplugin.po  kateopenheader.po  katepart4.po  kateproject.po  katesearch.po  katesnippetsplugin.po  katesql.po  katesymbolviewer.po  katetabbarextension.po  katetabifyplugin.po  katetextfilter.po  katexmlcheck.po  katexmltools.po  kcmkio.po  kcmkonq.po  kcmkonqhtml.po  kcmkurifilt.po  (+26 more)
KDE+zh_CN/4.13.x/messages/calligra/: ArtisticTextShape.po  AutocorrectPlugin.po  CalendarTool.po  ChangecasePlugin.po  ChartShape.po  CommentShape.po  FormulaShape.po  KarbonTools.po  KexiRelationDesignShapePlugin.po  MusicShape.po  PathShapes.po  PictureShape.po  PluginShape.po  SpellCheckPlugin.po  TableShape.po  TemplateShape.po  TextShape.po  ThreedShape.po  VariablesPlugin.po  VectorShape.po  VideoShape.po  braindump.po  calligra-defaulttools.po  calligra-dockers.po  calligra-opener.po  calligra.po  calligraactive.po  calligrafilters.po  desktop_calligra.po  flow.po  googledocs_plugin.po  karbon.po  kdgantt.po  kexi.po  kformdesigner_mapbrowser.po  kformdesigner_webbrowser.po  kocolorspaces.po  koconverter.po  koproperty.po  koreport_barcodeplugin.po  (+19 more)
KDE+zh_CN/4.13.x/messages/extragear-accessibility/: afaras.po  desktop_extragear-accessibility_simon.po  ksimond.po  plasma_applet_simonoid.po  sam.po  simon.po
KDE+zh_CN/4.13.x/messages/extragear-artwork/: desktop_extragear-artwork_kannasaver.po  kannasaver.po
KDE+zh_CN/4.13.x/messages/extragear-base/: bluedevil.po  desktop_extragear-base_bluedevil.po  desktop_extragear-base_kappfinder.po  desktop_extragear-base_kde-gtk-config.po  desktop_extragear-base_kscreen.po  desktop_extragear-base_kwebkitpart.po  desktop_extragear-base_mangonel.po  desktop_extragear-base_nepomuk-webminer.po  desktop_extragear-base_networkmanagement.po  desktop_extragear-base_plasma-mobile.po  desktop_extragear-base_polkit-kde-agent-1.po  desktop_extragear-base_polkit-kde-kcmodules-1.po  kappfinder.po  (+24 more)
amule+zh_CN/cvs/po/: zh_CN.po
colord-kde+zh_CN/0.3.0/colord-kcm/: kcm_colord.desktop
digikam+zh_CN/: .directory
gnustep-base+zh_CN/1.24.4/Resources/: GNUmakefile
gworkspace+zh_CN/GWorkspace/: GNUmakefile.in
homerun+zh_CN/1.1.0/po/: CMakeLists.txt
kamerka+zh_CN/0.8.5/po/: zh_CN.po
libkfapi+zh_CN/1.0/po/: CMakeLists.txt
libkfapi+zh_CN/1.0/po/zh_CN/: libkfbapi.po
listaller+zh_CN/0.5.8/po/: zh_CN.po
obconf+zh_CN/: zh_CN.po
pdfshuffler+zh_CN/0.6.0/po/: zh_CN.po
pinta+zh_CN/1.4/po/: zh_CN.po
plasma-mediacenter+zh_CN/1.1.0/po/: CMakeLists.txt
plasma-mediacenter+zh_CN/1.1.0/po/zh_CN/: CMakeLists.txt  plasma-mediacenter.po
polkit-kde-agent+zh_CN/0.99.0/po/: CMakeLists.txt
polkit-kde-agent+zh_CN/0.99.0/po/zh_CN/: polkit-kde-authentication-agent-1.po
pysdm+zh_CN/0.4.1/po/: zh_CN.po
smooth-tasks+zh_CN/2.0/po/: zh_CN.po
wxmaxima+zh_CN/13.04.2/locales/: ._pl.po  zh_CN.po
(+1182 files in other folders)
