find_package(Gettext REQUIRED)
if (NOT GETTEXT_MSGMERGE_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGMERGE_EXECUTABLE)
if (NOT GETTEXT_MSGFMT_EXECUTABLE)
MESSAGE(FATAL_ERROR "Please install msgmerge binary")
endif (NOT GETTEXT_MSGFMT_EXECUTABLE)
add_subdirectory(es)
add_subdirectory(pt_BR)
add_subdirectory(cs)
add_subdirectory(hr)
add_subdirectory(ms)
add_subdirectory(sk)
add_subdirectory(sr@ijekavian)
add_subdirectory(pt)
add_subdirectory(gl)
add_subdirectory(hu)
add_subdirectory(sr)
add_subdirectory(fr)
add_subdirectory(mai)
add_subdirectory(da)
add_subdirectory(ga)
add_subdirectory(th)
add_subdirectory(zh_TW)
add_subdirectory(en_GB)
add_subdirectory(ja)
add_subdirectory(sr@latin)
add_subdirectory(pa)
add_subdirectory(nb)
add_subdirectory(km)
add_subdirectory(ca@valencia)
add_subdirectory(sv)
add_subdirectory(ru)
add_subdirectory(lt)
add_subdirectory(uk)
add_subdirectory(nds)
add_subdirectory(ca)
add_subdirectory(et)
add_subdirectory(ro)
add_subdirectory(nl)
add_subdirectory(it)
add_subdirectory(de)
add_subdirectory(fi)
add_subdirectory(sr@ijekavianlatin)
add_subdirectory(eo)
add_subdirectory(tr)
add_subdirectory(is)
add_subdirectory(zh_CN)